no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -153,6 +153,7 @@ UTYPE                             #Union of several TYPE
 
 type TYPE = TYPE2                 #Alias
                                   #TYPE2 name will be used (not TYPE) in error messages and IDE tools.
+                                  #TYPE2 can reference TYPE (recursive type).
 
 typeof VAL                        #Returns its TYPE
                                   #If VAL is CLASS, returns its constructor() FUNC_TYPE (instead of instance OBJ_TYPE)
@@ -365,6 +366,14 @@ new (...) => TYPE2                #Require using new FUNC()
 { new (...): TYPE2 }              #  - e.g. a CLASS constructor
                                   #Prefer using a CLASS definition
 
+FUNCTION OVERLOADING ==>          #Can declare several FUNC_TYPEs in a row:
+                                  #  - with same name (including none)
+                                  #  - different arguments|return TYPEs
+                                  #Each overload is tried in order until one matches, i.e. most specific should be first.
+                                  #If not a method (OBJ.FUNC):
+                                  #  - must use syntax: function FUNC(...): TYPE
+                                  #  - must define the FUNC (not its type) right afterwards
+
 this                              #Can be:
                                   #  - VAR (argument): must be first parameter
                                   #  - TYPE2 (return value)
@@ -464,10 +473,6 @@ function [FUNC][<T,...>]
 
 [new] CLASS|FUNC<TYPE2,...>(...)  #Type assertion during FUNC call
 
-function FUNC(...): TYPE2         #Function overloading.
-...                               #The first FUNCs are the overloads, the last one is the implementation. Must follow each other.
-function FUNC(...): TYPE3 {...}   #Each overload is tried in order until one matches, i.e. most specific should be first.
-
 VAL!                              #Transtype to same TYPE minus undefined|null
 
 var|let VAR[: TYPE]               #If TYPE does not allow undefined (which excludes any|untyped):
@@ -544,7 +549,7 @@ TYPE INFERENCE ==>                #Only needed for untyped values:
 
 TYPE GUARDS ==>                   #When:
                                   #  - using: if|else, switch, ternary (? :), chaining (&& ||)
-                                  #  - with: typeof VAL, instanceof VAL, === !== == != VAL
+                                  #  - with: typeof VAL, instanceof VAL, === !== == != VAL, Boolean() (implicit|explicit), in
                                   #  - and only: ! && ||
                                   #Then inside the blocks:
                                   #  - ARG will be transtyped to the right TYPE
@@ -552,7 +557,7 @@ TYPE GUARDS ==>                   #When:
 VAR is TYPE                       #When used as FUNC return value's TYPE2, means FUNC() can be used as a type guard.
                                   #FUNC must return BOOL determining whether argument VAR belongs to TYPE.
 TAGGED UNION ==>                  #When type guarding with OBJ.VAR:
-                                  #  - with operators: === !== == != Boolean() (implicit|explicit) in
+                                  #  - with operators: === !== == != Boolean()
                                   #  - then it type guards OBJ as well
                                   #For example:
                                   #  type A = { kind: 'A' }
