no commit message

--- a/Languages/Static_analysis/Type_checking/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/typescript.language.txt
@@ -6,10 +6,9 @@
 
 
 See:
-  - https://github.com/microsoft/TypeScript/blob/master/src/lib/es5.d.ts (only one left)
   - https://github.com/microsoft/TypeScript/blob/master/doc/spec.md
-  - JSDoc then https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html
   - reorganize this doc, adding chapters
+  - JSDoc then https://www.typescriptlang.org/docs/handbook/type-checking-javascript-files.html
   - check VSCode options
   - to_learn.txt
   - GitHub search
@@ -390,10 +389,12 @@ Array<TYPE>                       #ARR of same types
 [..., ...ARR_TYPE]                #Spreads an ARR_TYPE
                                   #Does not work with TUPLE
 
-Object|Number|String|Boolean      #Should use object|number|string|boolean instead
-Error                             #
+Object|Number|String|Boolean|     #new Object|Number...()
+ Symbol|BigInt                    #Should use object|number|string|boolean|symbol|bigint instead
 RegExp                            #
 Date                              #
+[Eval|Range|Reference|Syntax|
+ Type|URI]Error                   #
 Promise<T>                        #PROMISE either:
                                   #  - resolving T
                                   #     - if 'never', means cannot resolve
@@ -407,11 +408,11 @@ Promise<T>                        #PROMISE either:
 GeneratorFunction                 #function*(){}
 Generator                         #ITERABLE returned by (function*(){})
 Proxy                             #
+ArrayBuffer[View]|DataView        #
 Uint8ClampedArray                 #
 [U]Int8|16|32Array                #
 Float32|64Array                   #
 Big[U]Int64Array                  #
-DataView                          #
 SharedArrayBuffer                 #
 
 { readonly ...: TYPE,... }        #Shallow immutability (like `const`) of OBJ properties.
@@ -577,7 +578,7 @@ NAMESPACE MERGING OTHERS ==>      #If another declaration|TYPE (not implementati
                                   #Both|neither must use export.
                                   #For CLASS, NAMESPACE must de declared after.
 
-declare QUAL VAR ...              #Declaration|TYPEs only, not implementation:
+declare QUAL VAR ...              #"Ambient declaration". Declaration|TYPEs only, not implementation:
 declare function ...              #  - VAR: cannot be initialized
 declare ... enum ...              #     - except with literal STR|NUM|BIGNUM|ENUM (treated as TYPE)
 declare ... class ...             #  - FUNC: no body
