no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -111,14 +111,14 @@ EXPR_STATEMENT                    #Statement with single EXPR.
 {...}                             #Child of STATEMENT, type 'BlockStatement':
                                   #  - body STATEMENT_ARR
 
-// COMMENT                       ##On NODE:
+// COMMENT                      B##On NODE:
 /* COMMENT */                   B##  - [leadingComment|trailingComments COMMENT_ARR]
-                                 ##On PROGRAM:
+                                a##On PROGRAM:
                                 a##  - comments COMMENT_ARR
-                                 ##COMMENT:
-                                 ##  - type 'Line|Block'
+                                a##COMMENT:
+                                a##  - type 'Line|Block'
                                 B##  - type 'CommentLine|Block'
-                                 ##  - value STR
+                                a##  - value STR
 
 
                                              /=+===============================+=\
@@ -186,7 +186,7 @@ FUNC                              #FUNCTION:
                                   #     - body STATEMENT|DIRECTIVE_ARR
                                   #  - generator BOOL
                                   #  - async BOOL
-                                 A#  - expression BOOL
+                                 AE#  - expression BOOL
 
 [async] function [*]FUNC(...){}   #Child of FUNCTION+DECLARATION, type 'FunctionDeclaration'
 [async] function [*][FUNC](...){} #Child of FUNCTION+EXPR, type 'FunctionExpression'
