--- a/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
+++ b/Languages/Metaprogramming/Parsing/Parse_tokenize/JavaScript/espree.javascript.txt
@@ -9,9 +9,12 @@ ALTERNATIVES ==>                  #See acorn
                                   #Still documented since it used by ESLint
 
 VERSION ==>                       #6.0.0
-                                  #Built on top of acorn but:
-                                  #  - different OPTS
-                                  #  - produces Esprima-compatible output for comments, locations and TOKENs
+
+DIFFERENCES FROM ACORN ==>        #Built on top of acorn but:
+                                  #  - OPTS: different names and fewer options
+                                  #  - TOP_NODE.comments instead of OPTS.onComment()
+                                  #  - trim whitespaces|comments for PROGRAM.loc|range
+                                  #  - TOKENs use Esprima format
 
 
                                              /=+===============================+=\
@@ -23,12 +26,10 @@ VERSION ==>                       #6.0.0
 
 ESPREE.parse('JS'[, OPTS])        #Like ACORN.parse('JS'), but with different OPTS:
  ->TOP_NODE                       #  - ecmaVersion (def: 5)
-                                  #  - range: like ACORN OPTS.ranges
-                                  #  - loc: like ACORN OPTS.locations
                                   #  - sourceType: like ACORN OPTS.sourceType
-                                  #  - comment BOOL (def: false):
-                                  #     - set TOP_NODE.comments COMMENT_ARR
-                                  #     - COMMENT is in Esprima format: type 'Line|Block', value STR, start|end|range|loc
+                                  #  - loc: like ACORN OPTS.locations
+                                  #  - range: like ACORN OPTS.ranges
+                                  #  - comment BOOL (def: false): set TOP_NODE.comments COMMENT_ARR
                                   #  - tokens BOOL (def: false): set TOP_NODE.tokens TOKEN_ARR
                                   #  - ecmaFeatures:
                                   #     - impliedStrict BOOL (def: false): imply 'use strict'
@@ -46,7 +47,7 @@ ESPREE.parse('JS'[, OPTS])        #Like ACORN.parse('JS'), but with different OP
 ESPREE.tokenize('JS'[, OPTS])     #Like [...ACORN.tokenizer('JS')], but:
   ->TOKEN_ARR                     #  - converts to Esprima token format OBJ:
                                   #     - type STR, among: Null, Boolean, Numeric, String, RegularExpression, Template,
-                                  #       Identifier, Keyword, Punctuator, JSXText, JSXIdentifier, EOF
+                                  #       Identifier, Keyword, Punctuator, JSXText, JSXIdentifier, <end>
                                   #     - value STR
                                   #     - start|end|range|loc
                                   #  - same OPTS as above except tokens
