no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -44,7 +44,7 @@ any                               #NODE:
                                   #     - start|end:
                                   #        - line NUM (1-indexed)
                                   #        - column NUM (0-indexed)
-                                t##  - start|end NUM (not line-wise)
+                               st##  - start|end NUM (not line-wise)
                                  ##  - range [NUM, NUM2] (not line-wise)
                                   #It is root type, abstract:
                                   #  - all other types inherit from it
