--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -354,7 +354,7 @@ IMPLICIT ==>                                    #To STR:
                                                 #  - OBJ:
                                                 #     - OBJ.toString|valueOf() (valueOf has priority)
                                                 #       (otherwise "[object NAME]")
-                                              -|#        - NAME is OBJ[Symbol.toStringTag]()->'NAME':
+                                              -|#        - NAME is OBJ[Symbol.toStringTag] 'NAME':
                                               -|#          'Object|Math|JSON|Function|AsyncFunction'
                                                 #        - REGEXP|DATE|ERROR: '...'
                                                 #        - ARR: ARR.join(',')
