--- a/Languages/Metaprogramming/Parsing/Traversing/JavaScript/acorn-walk.node.txt
+++ b/Languages/Metaprogramming/Parsing/Traversing/JavaScript/acorn-walk.node.txt
@@ -27,11 +27,11 @@ NODE.type                         #Include abstract types: 'Expression', 'Statem
                                   #     - WALK.simple|ancestors() fourth argument
                                   #     - WALK.findNode*() last argument
 
-WALK.simple(NODE, OBJ)            #Walk through AST tree and call OBJ.TYPE(CHILD_NODE) for each CHILD_NODE whose type is TYPE
+WALK.simple(NODE, OBJ)            #Walk through AST tree and call OBJ.TYPE(CHILD_NODE) for each CHILD_NODE whose type is TYPE.
                                   #Start with leaves, end with root.
 WALK.ancestors(NODE, OBJ)         #Same but instead call OBJ.TYPE(CHILD_NODE, ANCESTOR_NODE_ARR)
-                                  #ANCESTOR_NODE_ARR starts with ancestor and ends with CHILD_NODE
-WALK.full[Ancestors](NODE, FUNC)  #Same as two previous ezcept always FUNC(CHILD_NODE, ...)
+                                  #ANCESTOR_NODE_ARR starts with ancestor and ends with CHILD_NODE.
+WALK.full[Ancestors](NODE, FUNC)  #Same as two previous except using FUNC(CHILD_NODE, ...) for any CHILD_NODE
 
 WALK.findNodeAt                   #Returns OBJ, with OBJ.node, first NODE where:
 (NODE[, START_OFFSET[, END_OFFSET #  - NODE.start === START_OFFSET (unless null|undefined)
