no commit message

--- a/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
+++ b/Languages/Coding_style/Linting/JavaScript/eslint.node_cli.txt
@@ -1087,6 +1087,11 @@ unicorn/prevent-abbreviations    ##Prevent abbreviations/shortnames for variable
                                  ##  - checkShorthandProperties BOOL (def: false): check "const {VAR} = VAL"
                                  ##  - checkProperties BOOL (def: true): check OBJ.VAR
                                  ##  - checkVariables BOOL (def: true): check VAR
+                                 ##  - checkFilenames BOOL (def: true)
+unicorn/no-keyword-prefix [OBJ]  ##Prevent variables names that start with OBJ.blacklist (def: ['new', 'class'])
+                                 ##OBJ:
+                                 ##  - onlyCamelcase BOOL (def: true)
+                                 ##  - checkProperties BOOL (def: true)
 id-blacklist STR...               #Forbidden VAR names
 
 new-cap [OBJ]                     #TYPE capitalization
@@ -1497,7 +1502,7 @@ no-useless-concat                 #Avoid STR_LIT + STR2_LIT
 prefer-template                   #Avoid STR + STR2, prefer `...`
 no-template-curly-in-string       #Avoid ${} inside "" or ''
 
-unicorn/*                        ##Module "eslint-plugin-unicorn" (9.1.1)
+unicorn/*                        ##Module "eslint-plugin-unicorn" (10.0.0)
 unicorn/prefer-starts-ends-with  ##Must use STR.startsWith|endsWith() when possible
 
 unicorn/no-hex-escape            ##Avoid \x... (prefer \u....)
