--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/espree.javascript.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/espree.javascript.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #See acorn
                                   #Still documented since it used by ESLint
 
-VERSION ==>                       #6.0.0-alpha.0
+VERSION ==>                       #6.0.0
                                   #Only goal is to use acorn, but produce Esprima-compatible output.
 
 
