no commit message

--- a/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
+++ b/Languages/JavaScript/JavaScript_core/JavaScript.language.txt
@@ -569,6 +569,11 @@ arguments                                       #Readonly ARRAYLIKE containing c
 FUNC([VAL]...)                                  #Fire FUNC and returns its return value
                                               -|#Can be ...ITERABLE, replaced by NEXT...
                                               -|#Can use trailing commas
+
+FUNC?.(...)                                 *-|~#Like FUNC == null ? undefined : FUNC(...)
+                                            *-|~#Does not work with new FUNC?.(...)
+OBJ?.FUNC(...)                              *-|~#Like OBJ == null ? undefined : OBJ.FUNC(...)
+
 FUNC.length                                     #Number of required arguments
 
 FUNC.name                                     -|#Is:
@@ -631,6 +636,9 @@ OBJ.VAR                                         #Access property (can be any typ
 OBJ['VAR']                                      #OBJ.VAR has same naming restrictions as QUAL VAR, except can be a reserved word
                                                 #OBJ['VAR'] can use any valid STR
 
+OBJ?.VAR                                    *-|~#Like OBJ == null ? undefined : OBJ.VAR
+OBJ?.['VAR']                                *-|~#Like OBJ == null ? undefined : OBJ['VAR']
+
 { VAR[: VAL] ... }                              #Literal OBJ.
                                                 #If could be interpreted as a { ... } structure (e.g. beginning of line),
                                                 #wrap with ()
@@ -682,7 +690,7 @@ Object.assign(OBJ[, OBJ2...])                 -|#Shallow copy of own enumerable 
 [QUAL] { [...] ...OBJ } = OBJ2                -|#Does Object.assign(OBJ, OBJ2), except the parts mentioned in ...
 
 OBJ.FUNC                                        #Since OBJ.* can be overriden, can avoid shadowing by using
-                                                #Object.prototype.FUNC.call(OBJ, ...) insteas of OBJ.FUNC(...)
+                                                #Object.prototype.FUNC.call(OBJ, ...) instead of OBJ.FUNC(...)
 
 
                                              /=+===============================+=\
@@ -1424,6 +1432,9 @@ Array.of(VAL...)                              -|#Same as new Array(VAL...) excep
 [ [VAL...] ]                                    #Literal form.
                                                 #Can use trailing commas
                                               -|#VAL can be ...ITERABLE
+
+ARR[NUM]                                        #
+ARR?.[NUM]                                  *-|~#Like ARR == null ? undefined : ARR[NUM]
 
 ARRAYLIKE                                       #Any OBJ which understand OBJ[NUM] and OBJ.length
                                                 #Can use all ARR methods, except concat() using:
