no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -526,6 +526,6 @@ import * as VAR                   #Child of MODULE_SPECIFIER, type 'ImportNamesp
 import "MDL"                      #
 import {}                         #Those have empty ARR as specifiers
 
-import("MDL")               seatbl#Child of EXPR, type 'ImportExpression':
-                            seatbl#  - source EXPR
-                           (atbl)##Treated as a CALL_EXPRESSION
+import("MDL")                setbl#Child of EXPR, type 'ImportExpression':
+                             setbl#  - source EXPR
+                            (tbl)##Treated as a CALL_EXPRESSION
