no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -8,7 +8,7 @@
 ALTERNATIVES ==>                  #  - ESTree (def): most supported
                                   #  - Shift: less supported
 
-VERSION ==>                       #Last check 13/07/2019
+VERSION ==>                       #Last check 13/08/2019
                                   #JavaScript AST standard
 
 TYPESCRIPT/FLOW ==>               #See TSESTree doc
@@ -332,13 +332,13 @@ debugger                          #Child of STATEMENT, type 'DebuggerStatement'
 
 STR|BOOL|NUM|BIGINT|null|REGEXP  b#Child of EXPR, type 'Literal':
                                  b#  - value STR|BOOL|NUM|null|REGEXP
-                              seb|#    or BIGINT
+                               seb#    or BIGINT
                                  b#  (REGEXP only)
                                  b#  - regex:
                                  b#     - pattern STR
                                  b#     - flags STR
-                             sebl|#  (BIGINT only)
-                             sebl|#  - bigint STR (without 'n')
+                              sebl#  (BIGINT only)
+                              sebl#  - bigint STR (without 'n')
                               (b)##Type 'String|Boolean|Numeric|Null|RegExpLiteral':
                               (b)##  - value STR|BOOL|NUM|null|REGEXP|BIGINT
                               (b)##  (not BOOL|null)
@@ -526,6 +526,6 @@ import * as VAR                   #Child of MODULE_SPECIFIER, type 'ImportNamesp
 import "MDL"                      #
 import {}                         #Those have empty ARR as specifiers
 
-import("MDL")              seatbl|#Child of EXPR, type 'ImportExpression':
-                           seatbl|#  - source EXPR
+import("MDL")               seatbl#Child of EXPR, type 'ImportExpression':
+                            seatbl#  - source EXPR
                            (atbl)##Treated as a CALL_EXPRESSION
