no commit message

--- a/Languages/JavaScript/Node/nodejs.javascript.txt
+++ b/Languages/JavaScript/Node/nodejs.javascript.txt
@@ -2160,9 +2160,9 @@ on('SIGNAL', FUNC('SIGNAL'))                    #Fires when signal emitted on cu
 on('unhandledRejection, FUNC(VAL, PROMISE))     #When PROMISE:
                                                 #  - is rejected
                                                 #  - and has no handler (PROMISE.catch())
---unhandled-rejections=STR                   12*#What to do on unhandled rejections if no 'unhandledRejection' event handler:
-                                             12*#  - 'strict': throw uncaughtException
-                                             12*#  - default: warning + (once) deprecation warning
+--unhandled-rejections=STR                   12*#What to do on 'unhandledRejection':
+                                             12*#  - 'strict': (unless 'unhandledRejection' event handler) warning + uncaughtException
+                                             12*#  - default: (unless 'unhandledRejection' event handler) warning + (once) deprecation warning
                                              12*#  - 'warn': warning
                                              12*#  - 'none': nothing
 on('rejectionHandled, FUNC(PROMISE))            #When adding PROMISE.catch() on a PROMISE that:
